# Python-Growth-Mindset

./: .gitignore  0.8.11  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
