[project]
name = "growth-mindset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.8",
    "markdown>=3.7",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pypdf>=5.3.0",
    "reportlab>=4.3.1",
    "streamlit>=1.42.2",
    "xlsxwriter>=3.2.2",
]
